# solana-exchange

./: .env.example  .eslintrc  .gitignore  .prettierrc  README.md  docker-compose.yml  docs.json  package.json  pnpm-lock.yaml  readme.md  tsconfig-backup.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
debug/: api.http
docs/: api-system.md  init.md
docs/@solana-agent-kit/plugin-misc/: README.md
env/: .dev.env  .local.env  .prod.env
prisma/: schema.prisma  seed.ts
prisma/migrations/20241231090350_init/: migration.sql
prisma/migrations/20241231100248_init/: migration.sql
prisma/migrations/20250102094233_init2/: migration.sql
python/: main.py  pyproject.toml
python/src/: lib.py  models.py  services.py  settings.py  starter.py
src/: app.controller.ts  app.module.ts  env.ts  index.ts  main.ts  repl.ts
src/agent/: index.ts
src/constants/: index.ts  secrets.ts
src/exchange/: exchange.dto.ts  exchange.module.ts  exchange.service.ts  market.controller.ts  order.controller.ts
src/middleware/: apikey-auth.middleware.ts  app.interceptor.ts  logging.middleware.ts
src/tools/: create_gibwork_task.ts  create_orca_single_sided_whirlpool.ts  deploy_collection.ts  deploy_token.ts  fetch_price.ts  get_balance.ts  get_token_data.ts  index.ts  launch_pumpfun_token.ts  lend.ts  mint_nft.ts  openbook_create_market.ts  pyth_fetch_price.ts  raydium_create_ammV4.ts  raydium_create_clmm.ts  raydium_create_cpmm.ts  request_faucet_funds.ts  send_compressed_airdrop.ts  trade.ts  transfer.ts
src/utils/: keypair.ts  send_tx.ts
(+47 files in other folders)
