[tool.poetry]
name = "solana-exchange-python-helper"
version = "0.1.0"
description = ""
authors = ["benny <b1623546466@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# there has some issue with mac when python version > 3.11
python = "~3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
loguru = "^0.7.3"
pydantic-settings = "^2.7.1"
aioredis = "^2.0.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
